dded: 	mmu	- Still need testing
	make.sh	=>	replaced by new make
	run.sh	=>	replaces by new make

	All makefiles:
		Better style
		Now you can actually read what's going on
		Added make run (does: make clean, make, and runs qemu)
		Added Toolchain to the main make

	Fixed all warnings, except one (couldn't fix it and didn't try that hard neither)

	mmu is bugged (and so is command processing due mmu), should be something in mmu.c with the casts, still not sure.

--- a/Bootloader/BMFS/Makefile
+++ b/Bootloader/BMFS/Makefile
@@ -1,4 +1,5 @@
 all:
-	gcc -ansi -std=c99 -Wall -pedantic -o bmfs.bin bmfs.c
+	@gcc -ansi -std=c99 -Wall -pedantic -o bmfs.bin bmfs.c
+	@echo -e "	BMFS		[ \033[0;32mOK \033[0m]"
 clean:
-	rm -f bmfs.bin
+	@rm -f bmfs.bin
