--- a/Bootloader/Makefile
+++ b/Bootloader/Makefile
@@ -1,11 +1,14 @@
 all: bmfs pure64
 
 bmfs:
-	cd BMFS; $(MAKE) all
+	@echo -e "Bootloader:"
+	@cd BMFS; $(MAKE) all --no-print-directory
+
 pure64:
-	cd Pure64; $(MAKE) all
+	@cd Pure64; $(MAKE) all --no-print-directory
+
 clean:
-	cd BMFS; $(MAKE) clean
-	cd Pure64; $(MAKE) clean
+	@cd BMFS; $(MAKE) clean --no-print-directory
+	@cd Pure64; $(MAKE) clean --no-print-directory
 
 .PHONY: all bmfs pure64 clean
