--- a/Image/Makefile
+++ b/Image/Makefile
@@ -15,23 +15,24 @@ PACKEDKERNEL=packedKernel.bin
 IMGSIZE=6291456
 
 all: $(IMG) $(VMDK) $(QCOW2)
+	@echo -e "	Image		[ \033[0;32mOK \033[0m]"
 
 $(KERNEL):
-	cd ../Kernel; make
+	@cd ../Kernel; make
 
 $(PACKEDKERNEL): $(KERNEL) $(USERLAND)
-	$(MP) $(KERNEL) $(USERLAND) -o $(PACKEDKERNEL)
+	@$(MP) $(KERNEL) $(USERLAND) -o $(PACKEDKERNEL)
 
 $(IMG): $(BMFS) $(MBR) $(PURE64) $(PACKEDKERNEL)
-	$(BMFS) $(IMG) initialize $(IMGSIZE) $(MBR) $(PURE64) $(PACKEDKERNEL) 
+	@$(BMFS) $(IMG) initialize $(IMGSIZE) $(MBR) $(PURE64) $(PACKEDKERNEL) 
 
 $(VMDK): $(IMG)
-	qemu-img convert -f raw -O vmdk $(IMG) $(VMDK) 
+	@qemu-img convert -f raw -O vmdk $(IMG) $(VMDK) 
 
 $(QCOW2): $(IMG)
-	qemu-img convert -f raw -O qcow2 $(IMG) $(QCOW2)
+	@qemu-img convert -f raw -O qcow2 $(IMG) $(QCOW2)
 
 clean:
-	rm -rf $(IMG) $(VMDK) $(QCOW2) *.bin
+	@rm -rf $(IMG) $(VMDK) $(QCOW2) *.bin
 
 .PHONY: all clean
