--- a/Toolchain/Makefile
+++ b/Toolchain/Makefile
@@ -1,9 +1,10 @@
 all: modulePacker
+	@echo -e "Toolchain		[ \033[0;32mOK \033[0m]"
 
 modulePacker:
-	cd ModulePacker; make all
+	@cd ModulePacker; make all --no-print-directory
 
 clean:
-	cd ModulePacker; make clean
+	@cd ModulePacker; make clean --no-print-directory
 
 .PHONY: modulePacker all clean
