--- a/Toolchain/ModulePacker/Makefile
+++ b/Toolchain/ModulePacker/Makefile
@@ -2,11 +2,12 @@ MP=mp.bin
 SOURCES=$(wildcard *.c)
 
 all: $(MP)
+	@echo -e "ModulePacker		[ \033[0;32mOK \033[0m]"
 
 $(MP): $(SOURCES)
-	gcc $(SOURCES) -o $(MP)
+	@gcc $(SOURCES) -o $(MP)
 
 clean:
-	rm -rf $(MP)
+	@rm -rf $(MP)
 
 .PHONY: all clean
