--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -3,14 +3,15 @@ include Makefile.inc
 all: lib shellModule
 
 lib:
-	cd libc; make
+	@echo -e "Userland:"
+	@cd libc; make --no-print-directory
 
 shellModule:
-	cd shell; make
+	@cd shell; make --no-print-directory
 
 clean:
-	cd libc; make clean
-	cd shell; make clean
+	@cd libc; make clean --no-print-directory
+	@cd shell; make clean --no-print-directory
 
 .PHONY:
 	libc shellModule all clean
