Still working on mmu, Scheduler disabled from Kernel/Makefile, use commented line to use it

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -2,7 +2,8 @@ include Makefile.inc
 
 KERNEL=kernel.bin
 SYSTEM=
-SOURCES=$(wildcard *.c) $(wildcard system/*.c) $(wildcard drivers/*.c) $(wildcard Scheduler/*.c)
+SOURCES=$(wildcard *.c) $(wildcard system/*.c) $(wildcard drivers/*.c)
+#SOURCES=$(wildcard *.c) $(wildcard system/*.c) $(wildcard drivers/*.c) $(wildcard Scheduler/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm) $(wildcard system/asm/*.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
