Almost fixed mutex

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -2,7 +2,7 @@ include Makefile.inc
 
 KERNEL=kernel.bin
 SYSTEM=
-SOURCES= $(wildcard system/scheduler/*.c) $(wildcard *.c) $(wildcard system/*.c) $(wildcard drivers/*.c) 
+SOURCES= $(wildcard system/scheduler/*.c) $(wildcard *.c) $(wildcard system/*.c) $(wildcard drivers/*.c) $(wildcard tests/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm) $(wildcard system/asm/*.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
