ProducerConsumer done. No keys yet. Semaphores and sem methods implementation. Random implementation from osdev.

--- a/Userland/shell/Makefile
+++ b/Userland/shell/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 MODULE=shellModule.bin
-SOURCES=_loader.c shell.c commands.c fractals.c philosophers.c
+SOURCES=_loader.c shell.c commands.c fractals.c philosophers.c producerConsumer.c buffer.c
 OBJECTS=$(SOURCES:.c=.o)
 LIBC=-L../ -lc
 
