Added: 		- As much TODO comments as I could (to delete unused code, review logic, etc). 		- The video driver now uses locks to prevent 2 process writing at the ame time. 		- Tests for video and semaphores. 	Removed: 		- mutex.h (userland, use system calls and no void * casting shit, they are TAD for something). 		- semaphore.h (same as mutex). 	Fixed: 		- mutex is now really working. 		- semaphore is now working. 		- queues are now working as they should. 		- Makefile (shell) 		- All warnings 		- Minor fix on string.h (strcat was defined as k_strcat) 	Updated: 		- All test had been updated. 		- Code style. 		- Some system calls. 		- Little code purge. 		- TODO.txt 		- Organized userland's tests folder (This test folder shouldn't exits, all tests must be placed on kernel) 	Bugs: 		- Delete of characters if fucked up (video.c), should be fixed 		- Help command ain't working (with params) 	Other: 		- Many stuff I can't recall

--- a/Userland/shell/Makefile
+++ b/Userland/shell/Makefile
@@ -2,8 +2,7 @@ include ../Makefile.inc
 
 MODULE=shellModule.bin
 SOURCES=_loader.c shell.c extra/commands.c extra/fractal.c extra/philosophers.c extra/producerConsumer.c extra/buffer.c tests/cvtest.c tests/pipeTest.c
-#$(wildcard tests/*.c)
-#SOURCES=_loader.c shell.c $(wildcard extra/*.c) $(wildcard tests/*.c)
+#after buffer extra/visualProdCons.c
 OBJECTS=$(SOURCES:.c=.o)
 LIBC=-L../ -lc
 
