All test do compile (not tested yet)

--- a/Userland/shell/Makefile
+++ b/Userland/shell/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 MODULE=shellModule.bin
-SOURCES=_loader.c shell.c extra/commands.c extra/fractal.c extra/philosophers.c extra/producerConsumer.c extra/buffer.c extra/visualProdCons.c tests/cvtest.c tests/pipeTest.c
+SOURCES=_loader.c shell.c extra/commands.c extra/fractal.c extra/philosophers.c extra/producerConsumer.c extra/buffer.c extra/visualProdCons.c $(wildcard tests/*.c)
 OBJECTS=$(SOURCES:.c=.o)
 LIBC=-L../ -lc
 
